--- a/src/App.scss
+++ b/src/App.scss
@@ -46,12 +46,17 @@
      
     }
   }
+  .city_dont_found{
+    margin-top: 10%;
+    font-size: 5rem;
+  }
 
   .temp_data {
     text-align: center;
     .temperature {
       font-size: 10rem;
     }
+   
 
     .city {
       position: relative;
